--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "stripe-api-ts",
   "version": "0.1.0",
   "description": "TypeScript API client for Stripe API",
-  "main": "dist/stripe.api.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "test",
     "generate": "node generate.js",
-    "build": "tsc",
+    "build": "pika build",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
   },
@@ -20,9 +20,35 @@
     "oazapfts": "^3.1.3"
   },
   "devDependencies": {
+    "@pika/pack": "^0.5.0",
+    "@pika/plugin-build-node": "^0.9.2",
+    "@pika/plugin-build-types": "^0.9.2",
+    "@pika/plugin-build-web": "^0.9.2",
+    "@pika/plugin-bundle-node": "^0.9.2",
+    "@pika/plugin-bundle-web": "^0.9.2",
+    "@pika/plugin-ts-standard-pkg": "^0.9.2",
     "node-fetch": "^2.6.1",
     "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
     "typescript": "^4.0.5"
+  },
+  "@pika/pack": {
+    "pipeline": [
+      [
+        "@pika/plugin-ts-standard-pkg"
+      ],
+      [
+        "@pika/plugin-build-types"
+      ],
+      [
+        "@pika/plugin-build-web"
+      ],
+      [
+        "@pika/plugin-bundle-web"
+      ],
+      [
+        "@pika/plugin-build-node"
+      ]
+    ]
   }
 }
