--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,6 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node"
-  }
+  },
+  "include": ["src"]
 }
