--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stripe-api-ts",
-  "version": "0.2.0",
+  "version": "0.3.0-0",
   "description": "TypeScript API client for Stripe API",
   "main": "dist/index.js",
   "scripts": {
